# yaml-doctor

./: README.md  deep_auto_fix.py  pyproject.toml  yaml_doctor.py
.github/workflows/: ci.yml  release.yml
tests/: test_auto_fix.py  test_yaml_doctor.py
